W* depends on ρ† and not ρ'

--- a/text/overview.tex
+++ b/text/overview.tex
@@ -56,7 +56,7 @@ Much as in the \emph{YP}, we specify $\Upsilon$ as the implication of formulatin
   \rho^\dagger &\prec (\xtdisputes, \rho) \label{eq:rhodagger} \\
   \rho^\ddagger &\prec (\xtassurances, \rho^\dagger) \label{eq:rhoddagger} \\
   \rho' &\prec (\xtguarantees, \rho^\ddagger, \kappa, \tau') \label{eq:rhoprime} \\
-  \mathbf{W}^* &\prec (\xtassurances, \rho') \\
+  \mathbf{W}^* &\prec (\xtassurances, \rho^\dagger) \\
   (\ready', \accumulated', \accountspostxfer, \chi', \iota', \varphi', \lastaccout', \mathbf{I}, \mathbf{X}) &\prec (\mathbf{W}^*, \ready, \accumulated, \accountspre, \chi, \iota, \varphi, \tau, \tau') \label{eq:accountspostxfer} \\
   \recenthistory' &\prec (\mathbf{H}, \xtguarantees, \recenthistory^\dagger, \lastaccout') \label{eq:betaprime} \\
   \accountspostpreimage &\prec (\xtpreimages, \accountspostxfer, \tau') \label{eq:accountspostpreimage} \\
